# 1brc-python

./: .dockerignore  .gitignore  Dockerfile  Makefile  Pipfile  README.md  ROADMAP.md  cpython.modin.Dockerfile  cpython_perf.Dockerfile  pyproject.toml  setup.cfg
.devcontainer/: devcontainer.json
dockerfiles/: cpython.Dockerfile  cpython.modin.Dockerfile  cpython_perf.Dockerfile  cpython_perf.modin.Dockerfile
scripts/: docker_run_all_100m.sh  docker_run_all_100t.sh  docker_run_all_1b.sh  docker_run_all_200m.sh  docker_run_all_cpython_100m.sh  docker_run_all_cpython_100t.sh  docker_run_all_cpython_dask_100m.sh  docker_run_all_cpython_dask_100t.sh  docker_run_all_cpython_duckdb_100m.sh  docker_run_all_cpython_duckdb_100t.sh  docker_run_all_cpython_modin_100m.sh  docker_run_all_cpython_modin_100t.sh  docker_run_all_cpython_numpy_100m.sh  docker_run_all_cpython_numpy_100t.sh  docker_run_all_cpython_pandas_100m.sh  docker_run_all_cpython_pandas_100t.sh  docker_run_all_cpython_perf_100m.sh  docker_run_all_cpython_perf_100t.sh  docker_run_all_cpython_perf_dask_100m.sh  docker_run_all_cpython_perf_dask_100t.sh  docker_run_all_cpython_perf_duckdb_100m.sh  docker_run_all_cpython_perf_duckdb_100t.sh  docker_run_all_cpython_perf_modin_100m.sh  docker_run_all_cpython_perf_modin_100t.sh  docker_run_all_cpython_perf_no_gc_100m.sh  docker_run_all_cpython_perf_no_gc_100t.sh  docker_run_all_cpython_perf_numpy_100m.sh  docker_run_all_cpython_perf_numpy_100t.sh  docker_run_all_cpython_perf_pandas_100m.sh  docker_run_all_cpython_perf_pandas_100t.sh  docker_run_all_cpython_polars_100m.sh  (+8 more)
(+194 files in other folders)
